{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 62,
  "lineage": "7f6edae4-0055-b9a3-1f0a-116db2918f9f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05134c8ef96964280",
            "arn": "arn:aws:ec2:us-west-2:021891610828:instance/i-00927a27b426dadad",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-EC2_instance_profile",
            "id": "i-00927a27b426dadad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-chirag-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e951197ce2cb8a7a",
            "private_dns": "ip-10-1-1-95.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.95",
            "public_ip": "35.94.168.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04faaa8fda32c1b6a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bc11e188f65f904",
            "tags": {
              "Name": "prod-Webserver-chirag"
            },
            "tags_all": {
              "Name": "prod-Webserver-chirag"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0012066f2bdafe037"
            ]
          },
          "dependencies": [
            "module.s3.aws_iam_instance_profile.ec2_instance_profile",
            "module.vpc.aws_security_group.ec2_sg_ssh",
            "module.vpc.aws_subnet.Project_public_subnet",
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:internet-gateway/igw-04cc4ecd2bb8056f3",
            "id": "igw-04cc4ecd2bb8056f3",
            "owner_id": "021891610828",
            "tags": {
              "Name": "prod-chirag"
            },
            "tags_all": {
              "Name": "prod-chirag"
            },
            "vpc_id": "vpc-0e31b8341122555d8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Project_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:route-table/rtb-0480122cedc3762b9",
            "id": "rtb-0480122cedc3762b9",
            "owner_id": "021891610828",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cc4ecd2bb8056f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e31b8341122555d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Project_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c055cd872fbc935",
            "route_table_id": "rtb-0480122cedc3762b9",
            "subnet_id": "subnet-02bc11e188f65f904"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_route_table.Project_public_rt",
            "module.vpc.aws_subnet.Project_public_subnet",
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:security-group/sg-0012066f2bdafe037",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0012066f2bdafe037",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240823093655260300000001",
            "name_prefix": "terraform-",
            "owner_id": "021891610828",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg-chirag"
            },
            "tags_all": {
              "Name": "prod-sg-chirag"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e31b8341122555d8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:subnet/subnet-02bc11e188f65f904",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bc11e188f65f904",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891610828",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0e31b8341122555d8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ProjectVPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ProjectVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:021891610828:vpc/vpc-0e31b8341122555d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0326970371526f3a0",
            "default_route_table_id": "rtb-07c2d46a703bcb8ac",
            "default_security_group_id": "sg-0d90cbfca337b483b",
            "dhcp_options_id": "dopt-0a0f54c7cec7d2a9a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e31b8341122555d8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c2d46a703bcb8ac",
            "owner_id": "021891610828",
            "tags": {
              "Name": "prod-chirag"
            },
            "tags_all": {
              "Name": "prod-chirag"
            }
          }
        }
      ]
    }
  ]
}